man_MANS = \
	deskguide_applet.1			\
	gmenu.1					\
	gnome-about.1				\
	gnome-edit.1				\
	gnome-hint.1				\
	gnome-hint-properties-capplet.1		\
	gnome-libice-check.1			\
	gnome-login-check.1			\
	gnome-panel-add-launcher.1		\
	gnome-panel-properties-capplet.1	\
	gnome-smproxy.1				\
	panel.1					\
	session-properties.1			\
	session-properties-capplet.1		\
	tasklist_applet.1

EXTRA_DIST = $(man_MANS)
