pixmapdir = $(datadir)/pixmaps
tilesdir = $(datadir)/pixmaps/tiles

BITMAPS     = \
	emacs.png				\
	gnome-aorta.png				\
	gnome-audio2.png			\
	gnome-balsa2.png			\
	gnome-calc2.png				\
	gnome-calendar.png			\
	gnome-cardgame.png			\
	gnome-color-browser.png			\
	gnome-cromagnon.png			\
	gnome-default.png			\
	gnome-die1.png				\
	gnome-die2.png				\
	gnome-die3.png				\
	gnome-die4.png				\
	gnome-die5.png				\
	gnome-die6.png				\
	gnome-ee.png				\
	gnome-file-c.png			\
	gnome-file-h.png			\
	gnome-folder.png			\
	gnome-gemvt.png				\
	gnome-gegl.png				\
	gnome-gimp.png				\
	gnome-globe.png				\
	gnome-gmenu.png				\
	gnome-gmush.png				\
	gnome-gnomine.png			\
	gnome-gsame.png				\
	gnome-help.png				\
	gnome-html.png				\
	gnome-image-gif.png			\
	gnome-image-jpeg.png			\
	gnome-irc.png				\
	gnome-lockscreen.png			\
	gnome-log.png				\
	gnome-logo-icon.png			\
	gnome-logo-icon-transparent.png		\
	gnome-logo-large.png			\
	gnome-mnemonic.png			\
	gnome-money.png				\
	gnome-networktool.png			\
	gnome-note.png				\
	gnome-qeye.png				\
	gnome-talk.png				\
	gnome-term-linux.png			\
	gnome-term-linux2.png			\
	gnome-term-night.png			\
	gnome-term-tiger.png			\
	gnome-eterm.png				\
	gnome-term.png				\
	gnome-tigert.png			\
	gnome-unknown.png			\
	gnome-word.png				\
	kterm.xpm				\
	vnterm.xpm				\
	launcher-program.png			\
	monitor.png				\
	netscape.png				\
	panel-arrow-down.png			\
	panel-arrow-left.png			\
	panel-arrow-right.png			\
	panel-arrow-up.png			\
	panel-folder.png			\
	panel-drawer.png			\
	panel-knob.png				\
	gnome-mouse.png				\
	gnome-background.png			\
	panel-menu-main.png		\
	apple-green.png			\
	apple-red.png				\
	gnome-ccbackground.png	\
	gnome-ccthemes.png		\
	gnome-ccdialog.png	\
	gnome-ccscreensaver.png	\
	gnome-ccwindowmanager.png


TILES     = \
	tile-normal-up.png			\
	tile-normal-down.png			\
	tile-purple-up.png			\
	tile-purple-down.png			\
	tile-green-up.png			\
	tile-green-down.png		        \
	tile-blue-up.png			\
	tile-blue-down.png		        \
	tile-coral-up.png			\
	tile-coral-down.png			\
	tile-moon-up.png			\
	tile-moon-down.png			\
	tile-sand-up.png			\
	tile-sand-down.png			\
	tile-drc-1-up.png			\
	tile-drc-1-down.png			\
	tile-drc-2-up.png			\
	tile-drc-2-down.png			\
	tile-drc-4-up.png			\
	tile-drc-4-down.png

pixmap_DATA = $(BITMAPS)

tiles_DATA = $(TILES)

EXTRA_DIST  = $(BITMAPS) $(TILES)
