pixmapdir = $(datadir)/pixmaps
tilesdir = $(datadir)/pixmaps/tiles

BITMAPS     = \
	gnome-emacs.png				\
	gnome-aorta.png				\
	gnome-amusements.png        \
	gnome-applets.png			\
	gnome-applications.png      \
	gnome-audio2.png			\
	gnome-calc2.png				\
	gnome-calendar.png			\
	gnome-cardgame.png			\
	gnome-clock.png             \
	gnome-color-browser.png			\
	gnome-color-xterm.png           \
	gnome-cromagnon.png			\
	gnome-devel.png             \
	gnome-die1.png				\
	gnome-die2.png				\
	gnome-die3.png				\
	gnome-die4.png				\
	gnome-die5.png				\
	gnome-die6.png				\
	gnome-diskfree.png          \
	gnome-favorites.png			\
	gnome-file-c.png			\
	gnome-file-h.png			\
	gnome-folder.png			\
	gnome-gemvt.png				\
	gnome-gegl.png				\
	gnome-gegl2.png				\
	gnome-gegl2-2.png			\
	gnome-gimp.png				\
	gnome-globe.png				\
	gnome-gmenu.png				\
	gnome-gmush.png				\
	gnome-gnomine.png			\
	gnome-gnomoku.png			\
	gnome-graphics.png          \
	gnome-gsame.png				\
	gnome-help.png				\
	gnome-html.png				\
	gnome-image-gif.png			\
	gnome-image-jpeg.png			\
	gnome-touristinfo.png       \
	gnome-irc.png				\
	gnome-joystick.png          \
	gnome-laptop.png            \
	gnome-lockscreen.png			\
	gnome-log.png				\
	gnome-logo-icon.png			\
	gnome-logo-icon-transparent.png		\
	gnome-logo-large.png			\
	gnome-mailcheck.png         \
	gnome-mdi.png				\
	gnome-mnemonic.png			\
	gnome-modem.png             \
	gnome-money.png				\
	gnome-monitor.png           \
	gnome-multimedia.png        \
	gnome-networktool.png			\
	gnome-news.png				\
	gnome-note.png				\
	gnome-panel.png				\
	gnome-qeye.png				\
	gnome-run.png				\
	gnome-session.png			\
	gnome-settings.png          \
	gnome-spider.png			\
	gnome-squeak.png            \
	gnome-talk.png				\
	gnome-term-linux.png			\
	gnome-term-linux2.png			\
	gnome-term-night.png			\
	gnome-term-tiger.png			\
	gnome-eterm.png				\
	gnome-xterm.png				\
	gnome-terminal.png			\
	gnome-term.png				\
	gnome-tigert.png			\
	gnome-unknown.png			\
	gnome-user-interface.png		\
	gnome-util.png              \
	gnome-word.png				\
	kterm.xpm				\
	vnterm.xpm				\
	launcher-program.png			\
	monitor.png				\
	panel-arrow-down.png			\
	panel-arrow-left.png			\
	panel-arrow-right.png			\
	panel-arrow-up.png			\
	panel-folder.png			\
	panel-drawer.png			\
	panel-knob.png				\
	gnome-mouse.png				\
	gnome-background.png			\
	panel-menu-main.png		\
	apple-green.png			\
	apple-red.png				\
	gnome-ccbackground.png	\
	gnome-ccdesktop.png     \
	gnome-ccthemes.png		\
	gnome-ccdialog.png	\
	gnome-ccmime.png    \
	gnome-ccscreensaver.png	\
	gnome-ccwindowmanager.png \
	gnome-cckeyboard-bell.png	\
	gnome-cckeyboard.png	\
	gnome-ccperiph.png      \
	gnome-debian.png	\
	gnome-suse.png		\
	gtkvim.png					\
	gnome-computer.png	

TILES     = \
	tile-normal-up.png			\
	tile-normal-down.png			\
	tile-purple-up.png			\
	tile-purple-down.png			\
	tile-green-up.png			\
	tile-green-down.png		        \
	tile-blue-up.png			\
	tile-blue-down.png		        \
	tile-coral-up.png			\
	tile-coral-down.png			\
	tile-moon-up.png			\
	tile-moon-down.png			\
	tile-sand-up.png			\
	tile-sand-down.png			\
	tile-drc-1-up.png			\
	tile-drc-1-down.png			\
	tile-drc-2-up.png			\
	tile-drc-2-down.png			\
	tile-drc-4-up.png			\
	tile-drc-4-down.png

pixmap_DATA = $(BITMAPS)

tiles_DATA = $(TILES)

EXTRA_DIST  = $(BITMAPS) $(TILES)
